--- a/common/lib/xmodule/xmodule/css/videoalpha/display.scss
+++ b/common/lib/xmodule/xmodule/css/videoalpha/display.scss
@@ -513,6 +513,11 @@ div.videoalpha {
         height: 0px;
     }
 
+    ol.subtitles {
+        width: 0;
+        height: 0;
+    }
+
     ol.subtitles.html5 {
         background-color: rgba(243, 243, 243, 0.5);
         height: 380px;
